indicadores de calidad

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       <div class="collapse navbar-collapse" id="menuNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="empresa.html">Empresa</a></li>
-          <li class="nav-item"><a class="nav-link" href="planes.html">Planes</a></li>
-          <li class="nav-item"><a class="nav-link" href="pqrs.html">PQRS</a></li>
-          <li class="nav-item"><a class="nav-link" href="soporte-tecnico.html">Soporte Técnico</a></li>
-          <li class="nav-item"><a class="nav-link" href="familiash.html">Familia SH</a></li>
+          <li class="nav-item"><a class="nav-link" href="views/empresa.html">Empresa</a></li>
+          <li class="nav-item"><a class="nav-link" href="views/planes.html">Planes</a></li>
+          <li class="nav-item"><a class="nav-link" href="views/pqrs.html">PQRS</a></li>
+          <li class="nav-item"><a class="nav-link" href="views/soporte-tecnico.html">Soporte Técnico</a></li>
+          <li class="nav-item"><a class="nav-link" href="views/familiash.html">Familia SH</a></li>
         </ul>
       </div>
     </div>
@@ -66,7 +66,7 @@
           <div class="carousel-caption-custom">
             <h1 class="fw-bold display-5">Conéctate sin límites</h1>
             <p class="lead">Internet veloz y confiable para tu hogar o empresa</p>
-            <a href="planes.html" class="btn-elegante mt-2">Ver Planes</a>
+            <a href="views/planes.html" class="btn-elegante mt-2">Ver Planes</a>
           </div>
         </div>
       </div>
@@ -301,7 +301,7 @@
               <p>Barrio: La Inmaculada</p>
               <p>+57 3101234567</p>
             </div>
-            <a href="/planes.html" class="btn btn-elegante mt-3">Ver más</a>
+            <a href="views/planes.html" class="btn btn-elegante mt-3">Ver más</a>
           </div>
         </div>
 
@@ -320,7 +320,7 @@
               <p>Barrio: La Inmaculada</p>
               <p>+57 3101234567</p>
             </div>
-            <a href="/planes.html" class="btn btn-elegante mt-3">Ver más</a>
+            <a href="views/planes.html" class="btn btn-elegante mt-3">Ver más</a>
           </div>
         </div>
       </div>
@@ -481,12 +481,12 @@
           <h5 class="seccion-titulo text-orange mb-3">Atención al Cliente</h5>
           <ul class="footer-links list-unstyled">
             <li><a href="#" class="text-light text-decoration-none">Control Parental</a></li>
-            <li><a href="#" class="text-light text-decoration-none">Indicadores de calidad</a></li>
+            <li><a href="views/indicadores-calidad.html" class="text-light text-decoration-none">Indicadores de calidad</a></li>
             <li><a href="#" class="text-light text-decoration-none">Atención al Usuario</a></li>
             <li><a href="#" class="text-light text-decoration-none">Prevención de fraudes</a></li>
-            <li><a href="#" class="text-light text-decoration-none">Limitación de velocidad</a></li>
+            <li><a href="views/limitacion-velocidad.html" class="text-light text-decoration-none">Limitación de velocidad</a></li>
             <li><a href="#" class="text-light text-decoration-none">Gestión de tráfico</a></li>
-            <li><a href="#" class="text-light text-decoration-none">Cancelación de servicios</a></li>
+            <li><a href="views/cancelacion-servicios.html" class="text-light text-decoration-none">Cancelación de servicios</a></li>
           </ul>
         </div>
 
@@ -503,7 +503,7 @@
         <div class="col-md-4 mb-4">
           <h5 class="seccion-titulo text-orange mb-3">Regulación y Leyes</h5>
           <ul class="footer-links list-unstyled">
-            <li><a href="#" class="text-light text-decoration-none">Términos y condiciones</a></li>
+            <li><a class="text-light text-decoration-none">Términos y condiciones</a></li>
             <li><a href="#" class="text-light text-decoration-none">Política de equipos</a></li>
             <li><a href="#" class="text-light text-decoration-none">Compensación automática</a></li>
             <li><a href="#" class="text-light text-decoration-none">Seguridad en la red</a></li>
