--- a/index.html
+++ b/index.html
@@ -480,12 +480,12 @@
         <div class="col-md-4 mb-4">
           <h5 class="seccion-titulo text-orange mb-3">Atención al Cliente</h5>
           <ul class="footer-links list-unstyled">
-            <li><a href="#" class="text-light text-decoration-none">Control Parental</a></li>
+            <li><a href="views/control-parental.html" class="text-light text-decoration-none">Control Parental</a></li>
             <li><a href="views/indicadores-calidad.html" class="text-light text-decoration-none">Indicadores de calidad</a></li>
-            <li><a href="#" class="text-light text-decoration-none">Atención al Usuario</a></li>
-            <li><a href="#" class="text-light text-decoration-none">Prevención de fraudes</a></li>
+            <li><span class="text-muted link-disabled">Atención al Usuario</span></li>
+            <li><span class="text-muted link-disabled">Prevención de fraudes</span></li>
             <li><a href="views/limitacion-velocidad.html" class="text-light text-decoration-none">Limitación de velocidad</a></li>
-            <li><a href="#" class="text-light text-decoration-none">Gestión de tráfico</a></li>
+            <li><span class="text-muted link-disabled">Gestión de tráfico</span></li>
             <li><a href="views/cancelacion-servicios.html" class="text-light text-decoration-none">Cancelación de servicios</a></li>
           </ul>
         </div>
@@ -494,8 +494,8 @@
         <div class="col-md-4 mb-4">
           <h5 class="seccion-titulo text-orange mb-3">Sobre Nosotros</h5>
           <ul class="footer-links list-unstyled">
-            <li><a href="#" class="text-light text-decoration-none">Topología de la red</a></li>
-            <li><a href="#" class="text-light text-decoration-none">Acceso a internet</a></li>
+            <li><span class="text-muted link-disabled">Topología de la red</span></li>
+            <li><span class="text-muted link-disabled">Acceso a internet</span></li>
           </ul>
         </div>
 
@@ -503,13 +503,13 @@
         <div class="col-md-4 mb-4">
           <h5 class="seccion-titulo text-orange mb-3">Regulación y Leyes</h5>
           <ul class="footer-links list-unstyled">
-            <li><a class="text-light text-decoration-none">Términos y condiciones</a></li>
-            <li><a href="#" class="text-light text-decoration-none">Política de equipos</a></li>
-            <li><a href="#" class="text-light text-decoration-none">Compensación automática</a></li>
-            <li><a href="#" class="text-light text-decoration-none">Seguridad en la red</a></li>
-            <li><a href="#" class="text-light text-decoration-none">Contrato de servicios</a></li>
-            <li><a href="#" class="text-light text-decoration-none">Resolución 5111 de 2017</a></li>
-            <li><a href="#" class="text-light text-decoration-none">Denuncias de pornografía infantil</a></li>
+            <li><span class="text-muted link-disabled">Términos y condiciones</span></li>
+            <li><span class="text-muted link-disabled">Política de equipos</span></li>
+            <li><span class="text-muted link-disabled">Compensación automática</span></li>
+            <li><span class="text-muted link-disabled">Seguridad en la red</span></li>
+            <li><span class="text-muted link-disabled">Contrato de servicios</span></li>
+            <li><span class="text-muted link-disabled">Resolución 5111 de 2017</span></li>
+            <li><span class="text-muted link-disabled">Denuncias de pornografía infantil</span></li>
           </ul>
         </div>
       </div>
