--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
   <title>SH COMPANY SAS</title>
   
   <!-- Favicon y metadatos -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./image/logo.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./image/logo.png">
-  <link rel="shortcut icon" href="./image/logo.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="./image/logo.png">
-  <link rel="apple-touch-icon" href="./image/logo.png">
-  <meta property="og:image" content="./image/logo.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="image/logo.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="image/logo.png">
+  <link rel="shortcut icon" href="image/logo.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="image/logo.png">
+  <link rel="apple-touch-icon" href="image/logo.png">
+  <meta property="og:image" content="image/logo.png">
   <meta property="og:site_name" content="SH COMPANY SAS">
   <meta property="og:title" content="SH COMPANY SAS - Internet de Alta Velocidad">
   <meta property="og:description" content="Proveedor de servicios de internet de alta velocidad en Ayapel, Córdoba. Planes desde 200 Mbps con TV HD incluida.">
-  <meta name="twitter:image" content="./image/logo.png">
+  <meta name="twitter:image" content="image/logo.png">
   <meta name="theme-color" content="#f25c05">
   
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top p-3">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-        <img src="./image/logo.png" alt="SH Company Logo" class="logo-redondo" height="80">
+        <img src="image/logo.png" alt="SH Company Logo" class="logo-redondo" height="80">
         <span>SH COMPANY</span>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuNav">
@@ -54,7 +54,7 @@
 
         <div class="carousel-item active position-relative">
           <video autoplay muted loop playsinline webkit-playsinline>
-            <source src="./image/video1.mp4" type="video/mp4">
+            <source src="image/video1.mp4" type="video/mp4">
             Tu navegador no soporta el elemento de video.
           </video>
           <div class="overlay"></div>
@@ -64,7 +64,7 @@
 
         <div class="carousel-item position-relative">
           <video autoplay muted loop playsinline webkit-playsinline>
-            <source src="./image/Video4.mp4" type="video/mp4">
+            <source src="image/Video4.mp4" type="video/mp4">
             Tu navegador no soporta el elemento de video.
           </video>
           <div class="overlay"></div>
@@ -75,7 +75,7 @@
         </div>
 
         <div class="carousel-item position-relative">
-          <img src="./image/ayapel.png" alt="Banner 3" class="w-100 h-100" style="object-fit: cover;">
+          <img src="image/ayapel.png" alt="Banner 3" class="w-100 h-100" style="object-fit: cover;">
           <div class="overlay"></div>
           <div class="carousel-caption-custom">
             <h1 class="fw-bold display-5">Conéctate sin límites</h1>
@@ -304,7 +304,7 @@
         <div class="col-md-6 col-lg-4 d-flex justify-content-center">
           <div class="cobertura-card text-center">
             <!-- Imagen encima -->
-            <img src="./image/ayapel.jpeg" alt="Ayapel" class="img-fluid rounded-top mb-3 cobertura-img">
+            <img src="image/ayapel.jpeg" alt="Ayapel" class="img-fluid rounded-top mb-3 cobertura-img">
             
             <div class="mb-3">
               <i class="bi bi-map-fill" style="font-size: 2rem; color: #f25c05;"></i>
@@ -323,7 +323,7 @@
         <div class="col-md-6 col-lg-4 d-flex justify-content-center">
           <div class="cobertura-card text-center">
             <!-- Imagen encima -->
-            <img src="./image/ayapel.jpeg" alt="Las Delicias" class="img-fluid rounded-top mb-3 cobertura-img">
+            <img src="image/ayapel.jpeg" alt="Las Delicias" class="img-fluid rounded-top mb-3 cobertura-img">
 
             <div class="mb-3">
               <i class="bi bi-map-fill" style="font-size: 2rem; color: #e6671d;"></i>
@@ -386,25 +386,25 @@
       <div class="row g-4 justify-content-center">
         <div class="col-md-6 col-lg-3 d-flex">
           <div class="denuncia-card text-center w-100">
-            <img src="./image/bienestar.png" alt="Bienestar Familiar" class="denuncia-img">
+            <img src="image/bienestar.png" alt="Bienestar Familiar" class="denuncia-img">
             <a href="https://www.icbf.gov.co/" target="_blank" class="btn btn-denuncia mt-3">Denuncia aquí</a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 d-flex">
           <div class="denuncia-card text-center w-100">
-            <img src="./image/policia.jpg" alt="Centro Cibernético Policial" class="denuncia-img">
+            <img src="image/policia.jpg" alt="Centro Cibernético Policial" class="denuncia-img">
             <a href="https://caivirtual.policia.gov.co/" target="_blank" class="btn btn-denuncia mt-3">Denuncia aquí</a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 d-flex">
           <div class="denuncia-card text-center w-100">
-            <img src="./image/entic.png" alt="En TIC Confío" class="denuncia-img">
+            <img src="image/entic.png" alt="En TIC Confío" class="denuncia-img">
             <a href="https://ciberpaz.gov.co/portal/" target="_blank" class="btn btn-denuncia mt-3">Denuncia aquí</a>
           </div>
         </div>
         <div class="col-md-6 col-lg-3 d-flex">
           <div class="denuncia-card text-center w-100">
-            <img src="./image/Fiscalia.jpg" alt="Fiscalía General de la Nación" class="denuncia-img">
+            <img src="image/Fiscalia.jpg" alt="Fiscalía General de la Nación" class="denuncia-img">
             <a href="https://www.fiscalia.gov.co/colombia/" target="_blank" class="btn btn-denuncia mt-3">Denuncia aquí</a>
           </div>
         </div>
@@ -537,7 +537,7 @@
 
         <!-- Logo -->
         <div class="col-md-3 mb-3 mb-md-0">
-          <img src="./image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
+          <img src="image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
         </div>
 
         <!-- Información institucional -->
@@ -562,16 +562,12 @@
       <!-- Logos adicionales -->
       <div class="row mt-4 text-center">
         <div class="col-md-4 mb-3">
-          <img src="./image/comunicados-logo.png" alt="Comunicados Como Es" class="img-fluid" style="max-height: 200px;">
+          <img src="image/comunicados-logo.png" alt="Comunicados Como Es" class="img-fluid" style="max-height: 200px;">
         </div>
         <div class="col-md-4 mb-3">
-          <img src="./image/mintic-logo.png" alt="MinTIC" class="img-fluid" style="max-height: 60px;">
         </div>
     
         <div class="col-md-4 mb-3">
-          <p class="text-white small mt-2">
-            Copyright © 2025 SH COMPANY SAS. Todos los derechos reservados.<br>
-          </p>
         </div>
       </div>
     </div>
