--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top p-3">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+      <a class="navbar-brand d-flex align-items-center gap-2" href="/inicio">
         <img src="image/logo.png" alt="SH Company Logo" class="logo-redondo" height="80">
         <span>SH COMPANY</span>
       </a>
@@ -37,12 +37,12 @@
       </button>
       <div class="collapse navbar-collapse" id="menuNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="views/empresa.html">Empresa</a></li>
-          <li class="nav-item"><a class="nav-link" href="views/planes.html">Planes</a></li>
-          <li class="nav-item"><a class="nav-link" href="views/pqrs.html">PQRS</a></li>
-          <li class="nav-item"><a class="nav-link" href="views/soporte-tecnico.html">Soporte Técnico</a></li>
-          <li class="nav-item"><a class="nav-link" href="views/familiash.html">Familia SH</a></li>
+          <li class="nav-item"><a class="nav-link active" href="/inicio">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="/empresa">Empresa</a></li>
+          <li class="nav-item"><a class="nav-link" href="/planes">Planes</a></li>
+          <li class="nav-item"><a class="nav-link" href="/pqrs">PQRS</a></li>
+          <li class="nav-item"><a class="nav-link" href="/soporte-tecnico">Soporte Técnico</a></li>
+          <li class="nav-item"><a class="nav-link" href="/familiash">Familia SH</a></li>
         </ul>
       </div>
     </div>
@@ -80,7 +80,7 @@
           <div class="carousel-caption-custom">
             <h1 class="fw-bold display-5">Conéctate sin límites</h1>
             <p class="lead">Internet veloz y confiable para tu hogar o empresa</p>
-            <a href="views/planes.html" class="btn-elegante mt-2">Ver Planes</a>
+            <a href="/planes" class="btn-elegante mt-2">Ver Planes</a>
           </div>
         </div>
       </div>
@@ -315,7 +315,7 @@
               <p>Barrio: La Inmaculada</p>
               <p>+57 3101234567</p>
             </div>
-            <a href="views/planes.html" class="btn btn-elegante mt-3">Ver más</a>
+            <a href="/planes" class="btn btn-elegante mt-3">Ver más</a>
           </div>
         </div>
 
@@ -334,7 +334,7 @@
               <p>Barrio: La Inmaculada</p>
               <p>+57 3101234567</p>
             </div>
-            <a href="views/planes.html" class="btn btn-elegante mt-3">Ver más</a>
+            <a href="/planes" class="btn btn-elegante mt-3">Ver más</a>
           </div>
         </div>
       </div>
@@ -494,13 +494,13 @@
         <div class="col-md-4 mb-4">
           <h5 class="seccion-titulo text-orange mb-3">Atención al Cliente</h5>
           <ul class="footer-links list-unstyled">
-            <li><a href="views/control-parental.html" class="text-light text-decoration-none">Control Parental</a></li>
-            <li><a href="views/indicadores-calidad.html" class="text-light text-decoration-none">Indicadores de calidad</a></li>
-            <li><a href="views/soporte-tecnico.html" class="text-light text-decoration-none">Atención al Usuario</a></li>
+            <li><a href="/control-parental" class="text-light text-decoration-none">Control Parental</a></li>
+            <li><a href="/indicadores-calidad" class="text-light text-decoration-none">Indicadores de calidad</a></li>
+            <li><a href="/soporte-tecnico" class="text-light text-decoration-none">Atención al Usuario</a></li>
             <li><span class="text-muted link-disabled">Prevención de fraudes</span></li>
-            <li><a href="views/limitacion-velocidad.html" class="text-light text-decoration-none">Limitación de velocidad</a></li>
+            <li><a href="/limitacion-velocidad" class="text-light text-decoration-none">Limitación de velocidad</a></li>
             <li><span class="text-muted link-disabled">Gestión de tráfico</span></li>
-            <li><a href="views/cancelacion-servicios.html" class="text-light text-decoration-none">Cancelación de servicios</a></li>
+            <li><a href="/cancelacion-servicios" class="text-light text-decoration-none">Cancelación de servicios</a></li>
           </ul>
         </div>
 
@@ -523,7 +523,7 @@
             <li><span class="text-muted link-disabled">Seguridad en la red</span></li>
             <li><span class="text-muted link-disabled">Contrato de servicios</span></li>
             <li><a href="docs/resolucioin_5111_de_ 2017.pdf" target="_blank" class="text-light text-decoration-none">Resolución 5111 de 2017</a></li>
-            <li><a href="views/proteccion-infantil.html" class="text-light text-decoration-none"><i class="bi bi-shield-fill-check me-1"></i>Protección Infantil - Internet Sano</a></li>
+            <li><a href="/proteccion-infantil" class="text-light text-decoration-none"><i class="bi bi-shield-fill-check me-1"></i>Protección Infantil - Internet Sano</a></li>
           </ul>
         </div>
       </div>
