--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark sticky-top p-3">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center gap-2" href="/inicio">
+      <a class="navbar-brand d-flex align-items-center gap-2" href="/">
         <img src="image/logo.png" alt="SH Company Logo" class="logo-redondo" height="80">
         <span>SH COMPANY</span>
       </a>
@@ -37,7 +37,7 @@
       </button>
       <div class="collapse navbar-collapse" id="menuNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active" href="/inicio">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link active" href="/">Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="/empresa">Empresa</a></li>
           <li class="nav-item"><a class="nav-link" href="/planes">Planes</a></li>
           <li class="nav-item"><a class="nav-link" href="/pqrs">PQRS</a></li>
